fix: question is lost when device width is too small

--- a/miniapp/static/app_session.css
+++ b/miniapp/static/app_session.css
@@ -181,7 +181,7 @@ p {
 
     .parent {
         grid-template-columns: 1fr;
-        grid-template-rows: auto auto 1fr auto;
+        grid-template-rows: auto auto auto auto auto;
         grid-row-gap: 15px;
         padding: 15px;
         min-height: calc(100vh - 40px);
@@ -204,13 +204,13 @@ p {
     }
 
     .cont-answer {
-        grid-area: 3 / 1 / 4 / 2;
+        grid-area: 4 / 1 / 5 / 2;
         padding: 10px;
-        margin-top: 20px;
+        margin-top: 0;
     }
 
     .cont-btn {
-        grid-area: 4 / 1 / 5 / 2;
+        grid-area: 5 / 1 / 6 / 2;
         padding: 20px 0 10px 0;
     }
 
@@ -274,7 +274,7 @@ p {
 
     .parent {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto auto auto;
         min-height: calc(100vh - 20px);
     }
 
